# mockser

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  openapi.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: handlers.rs  initial_configs.rs  logger.rs  main.rs  schemas.rs  settings.rs  shutdown.rs
tests/: config.json  main.rs  test.hurl
