[package]
name = "mockser"
version = "0.1.5"
edition = "2021"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "Configurable mock server for testing and development"
license = "MIT"
repository = "https://github.com/daxartio/mockser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
config = "0.14.0"
env_logger = "0.11.3"
human-panic = "1.2.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
hurl = "4.2.0"
hurl_core = "4.2.0"
rstest = "0.18.2"
