[package]
name = "mockser"
version = "0.1.6"
edition = "2021"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "Configurable mock server for testing and development"
license = "MIT"
repository = "https://github.com/daxartio/mockser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
config = "0.14.0"
env_logger = { version = "0.11.3", features = ["unstable-kv", "humantime"]}
human-panic = "2.0.1"
humantime = "2.1.0"
log = { version = "0.4.22", features = ["kv", "kv_serde"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
hurl = "4.3.0"
hurl_core = "4.3.0"
rstest = "0.22.0"
